--- a/package.json
+++ b/package.json
@@ -11,6 +11,16 @@
     "prepack": "npm run build",
     "build": "babel src --out-file dist/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lilbogdaddy/react-360-spin"
+  },
+  "keywords": [
+    "react",
+    "360Spin",
+    "3D image",
+    "react-360-spin"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
